force-app/main/default/objects/Activity/fields/date_of_update__c.field-meta.xml
<CustomField>
    <fullName>date_of_update__c</fullName>
    <label>date of update</label>
    <type>DateTime</type>
</CustomField>