force-app/main/default/objects/Activity/fields/Loan_Eligible_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Eligible_Amount__c</fullName>
    <label>Loan Eligible Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>