force-app/main/default/objects/Activity/fields/Original_Sales_Deed_Document_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Original_Sales_Deed_Document_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Original Sales Deed Document Uploaded</label>
    <type>Checkbox</type>
</CustomField>